<resources>
    <string name="app_name">Mascotas Application</string>
    <string name="Imagen">Imagen</string>
    <string name="imgtodo">imagen</string>
    <string name="favorito">Favorito</string>
    <string name="action_add">añadir</string>
    <string name="action_edit">editar</string>
    <string name="action_settings">configuracion</string>
    <string name="action_help">ayuda</string>
    <string name="action_about">salir</string>
    <string name="NombreAcercade">Carlos A. Arisitizabal K.</string>
    <string name="Bio">Tecnólogo en Producción Multimedia.
        Técnico en Operador de Computo con Énfasis en Diseño Gráfico.
        Técnico en laboral de Mantenimiento de Computo.
        Técnico en Electrónica,
        Y varios Cursos Virtuales del SENA.
        Soy una persona trabajadora, autónoma, responsable, recursiva,
        inteligente y creativa con muchas ganas de aprender y trabajar en el campo.</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="destinatario">Para:</string>
    <string name="Asunto">Asunto:</string>
    <string name="Mensaje">Mensaje…</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="perro">Nombre del perro</string>
    <string name="ingresar_correo">Ingresar Correo</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="todo" />
    <string name="selecciona_mascota_de_la_lista">Selecciona mascota de la lista</string>
</resources>